--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "website-portfolio",
-  "homepage": "https://manushpatell.github.io/Personal-Portfolio/",
+  "homepage": "https://manushpatell.github.io/manush-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages dist"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^11.15.0",
